# image-contrast

./: .gitignore  README.md
git-fetcher/: CMakeLists.txt  main.cpp
git-fetcher/common/: conditions.h  header.h  libs.h
git-fetcher/linux/: source.cpp
git-fetcher/unix/: libs.h  source.cpp
git-fetcher/windows/: libs.h  source.cpp
image-contrast/: .gitignore  CMakeLists.txt  conandata.yml  conanfile.txt  conditions.h  image_contrast.def  image_contrast.h  main.c  main.cpp
image-contrast-client/: CMakeLists.txt  main.cpp
image-contrast-client/common/: header.h
image-contrast-dynamic-client/: main.cpp
image-contrast-dynamic-client/common/: conditions.h  header.h
image-contrast/common/: header.h
image-contrast/linux/: libs.h  source.cpp
image-contrast/windows/: libs.h  source.c  source.cpp
image_contrast_dynamic_client/: CMakeLists.txt
text-resharp/: CMakeLists.txt  library.cpp  library.h
text-resharp-client/: CMakeLists.txt  main.cpp
text-resharp-client/common/: header.h
text-resharp-client/linux/: libs.h
text-resharp-client/windows/: source.cpp
text-resharp/common/: header.h
text-resharp/linux/: source.cpp
text-resharp/windows/: libs.h
